force-app/main/default/objects/Lead/fields/Attribute_Score__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Score__c</fullName>
    <label>属性スコア</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>属性のみのスコア（最大100）</description>
</CustomField>