force-app/main/default/objects/Lead/fields/Behavior_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Score__c</fullName>
    <label>行動スコア</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>行動スコア（時間減衰込み、最大120）</description>
</CustomField>