force-app/main/default/objects/Lead/fields/Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Interest_Score__c</fullName>
    <label>興味スコア</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>興味スコア（最大80）</description>
</CustomField>