force-app/main/default/objects/Lead/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <label>最終アクション日</label>
    <type>Date</type>
    <description>営業の最後のアクション日</description>
</CustomField>