force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <description>最終スコアから判定されるカテゴリ（Hot/Warm/Cold/Low）</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>