force-app/main/default/objects/Lead/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>スコア</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>3軸合算後の最終スコア</description>
</CustomField>