force-app/main/default/objects/Lead/fields/Score_Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Score_Last_Calculated__c</fullName>
    <label>スコア計算日時</label>
    <type>DateTime</type>
    <description>最後にスコアを計算した時刻</description>
</CustomField>